--- a/JPA/pom.xml
+++ b/JPA/pom.xml
@@ -49,6 +49,17 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -59,5 +70,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
